--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@master
       - name: instala dependências
-      - run: npm install
+        run: npm install
       - name: cria build
-      - run: npm run build
+        run: npm run build
