--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "prototipo-osi",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "homepage": "https://github.com/jomrs/prototipo-osi",
+  "author": "Jonhtan Mota <jmtrs@rede.ulbra.br>",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
